# nas

./: .env  .gitignore  Makefile  Vagrantfile  _getenv.sh  admin_packages.yml  backup-host  create_and_setup_user.yml  create_pubnet.sh  dcompose.sh  docker-compose.yml  hosts.tack  hosts.vagrant  samba.sh  setup_host_without_user.yml  setup_tack.yml  site.yml
backup/: Dockerfile  push-metrics-backup-done  readme.md  rsnapshot.conf  run-backup
cron/: .gitignore  Dockerfile  crontab  docker-prune  hostbackup-daily  hostbackup-monthly  run-monitored  user-crontab
cron/daily/: hostbackup  (+1 more)
data/: readme.txt
desktop/: Dockerfile  initialize-container.sh  run-sshd.sh  run.sh  services.conf
dnssync/: Dockerfile  README.md  pyproject.toml
dnssync/src/dnssync/: dnssync.py
files/: known_hosts
grafana/: Dockerfile
host/: .gitignore  Makefile  README.md  Vagrantfile  ansible.cfg  create_and_setup_user.yml  debian_base.yml  dockerd.yml  hosts.vagrant  nas.yml  pyproject.toml  renew_docker_certs.yml  run-playbook  setup_host.yml  setup_host_without_user.yml  setup_user.yml
prometheus/: Dockerfile  backup_rules.yml  cron_rules.yml  node_rules.yml  prometheus.yml
proxy/: Dockerfile  allsites.conf.template
samba/: Dockerfile  Dockerfile.aarch64  Makefile  samba.sh  smb.conf.custom
scripts/: git-subtree-add-remotes.sh  git-subtree-fetch-latest.sh  git-subtree-pull-latest.sh  git-subtree-split-latest.sh  subtrees.sh
wireguard/: Dockerfile  README.md  add-peer.sh  run-wg.sh
www/: Dockerfile  data.conf  index.html  port80.conf
wwwpublish/: Dockerfile  run.sh
(+46 files in other folders)
