[project]
name = "dnssync"
version = "0.1.0"
description = "syncs docker container IPs to public DNS (Route53)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "boto3>=1.40.0",
]

[dependency-groups]
dev = [
    "types-docker>=7.1.0.20251202",
]

[build-system]
requires = ["uv_build >= 0.9.15, <0.10.0"]
build-backend = "uv_build"

[project.scripts]
dnssync = "dnssync.dnssync:main"